# kevin_os

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: allocator.rs  alloctor.rs  bump.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
