[package]
name = "kevin_os"
version = "0.1.0"
edition = "2021"

[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"
[dependencies]
bootloader = "0.9.0"  
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"

[package.metadata.bootimage]
test-success-exit-code = 33
test-args = [ "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio","--display","none"]
test-timeout = 300 
[[test]]
name="should_panic"
harness = false
[[test]]
name= "stack_overflow"
harness=false
